Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp
@@ -109,24 +109,20 @@ void SetInlineFillColor::dump(TextStream& ts, OptionSet<AsTextFlag>) const
     ts.dumpProperty("color", color());
 }
 
-void SetInlineStrokeColor::apply(GraphicsContext& context) const
+void SetInlineStroke::apply(GraphicsContext& context) const
 {
-    context.setStrokeColor(color());
+    if (auto color = this->color())
+        context.setStrokeColor(*color);
+    if (auto thickness = this->thickness())
+        context.setStrokeThickness(*thickness);
 }
 
-void SetInlineStrokeColor::dump(TextStream& ts, OptionSet<AsTextFlag>) const
+void SetInlineStroke::dump(TextStream& ts, OptionSet<AsTextFlag>) const
 {
-    ts.dumpProperty("color", color());
-}
-
-void SetStrokeThickness::apply(GraphicsContext& context) const
-{
-    context.setStrokeThickness(m_thickness);
-}
-
-void SetStrokeThickness::dump(TextStream& ts, OptionSet<AsTextFlag>) const
-{
-    ts.dumpProperty("thickness", thickness());
+    if (auto color = this->color())
+        ts.dumpProperty("color", *color);
+    if (auto thickness = this->thickness())
+        ts.dumpProperty("thickness", *thickness);
 }
 
 SetState::SetState(const GraphicsContextState& state)
