Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.h
@@ -48,9 +48,8 @@ private:
     void recordScale(const FloatSize&) final;
     void recordSetCTM(const AffineTransform&) final;
     void recordConcatenateCTM(const AffineTransform&) final;
-    void recordSetInlineFillColor(SRGBA<uint8_t>) final;
-    void recordSetInlineStrokeColor(SRGBA<uint8_t>) final;
-    void recordSetStrokeThickness(float) final;
+    void recordSetInlineFillColor(PackedColor::RGBA) final;
+    void recordSetInlineStroke(SetInlineStroke&&) final;
     void recordSetState(const GraphicsContextState&) final;
     void recordSetLineCap(LineCap) final;
     void recordSetLineDash(const DashArray&, float dashOffset) final;
@@ -104,7 +103,7 @@ private:
     void recordStrokeRect(const FloatRect&, float) final;
 #if ENABLE(INLINE_PATH_DATA)
     void recordStrokeLine(const PathDataLine&) final;
-    void recordStrokeLineWithColorAndThickness(const PathDataLine&, SRGBA<uint8_t>, float thickness) final;
+    void recordStrokeLineWithColorAndThickness(const PathDataLine&, SetInlineStroke&&) final;
     void recordStrokeArc(const PathArc&) final;
     void recordStrokeQuadCurve(const PathDataQuadCurve&) final;
     void recordStrokeBezierCurve(const PathDataBezierCurve&) final;
